# creez

./: README.md
src/: .gitignore
src/creez/: .npmrc  README.md  package-lock.json  package.json  product_init.md  vite.config.js
src/creez/docs/: adding-skill-memory-tool.md  chat-flow.md  memory-and-skill-design.md  pi-providers-models-sessions-skills.md  skill-tool-paths-and-override.md
src/creez/scripts/: bundle-agent-runner.js  copy-main.js
src/creez/skills/storyboard-editor/: SKILL.md
src/creez/skills/youtube-downloader/: SKILL.md
src/creez/src/: agent-runner.mjs  main.js  preload.js
src/creez/src/renderer/: app.js  index.html  main.js  styles.css
src/creez_backend/: .dockerignore  Dockerfile  README.md  config.py  configmap_utils.py  deploy.sh  image_generation_helper.py  llm_client.py  log_util.py  main.py  prompt_generator.py  pyproject.toml  requirements.txt  supabase_client.py  task_runner.py  token_usage_utils.py  utils.py  video_generation_helper.py
src/creez_backend/Storage/: volc_tos.py
src/creez_backend/Tools/: utils_price_calculator.py
src/creez_backend/Tools/image_generator/: doubao_4_0_image_generator.py  image_generator.py
src/creez_backend/Tools/video_generator/: doubao_seedance.py  video_generator.py
src/creez_backend/deployment/: README.md  deployment_int.yaml  ingress_int.yaml
src/creez_backend/docs/: DEPLOY.md
src/creez_backend/exceptions/: __init__.py  self_defined.py
src/creez_backend/middleware/: auth.py
src/creez_backend/prompt/: generate_scene_image_parameters.txt
src/creez_backend/routers/: image.py  video.py
(+19 files in other folders)
